--- a/web/composer.json
+++ b/web/composer.json
@@ -82,7 +82,7 @@
             "@php artisan key:generate",
             "@php artisan migrate --force",
             "npm install",
-            "npm run build"
+            "npm run production"
         ],
         "dev": [
             "Composer\\Config::disableProcessTimeout",
